style: massive reformat with intellij